# id3tag-renamer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.alpine  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/id3tag_renamer/: __init__.py  config.py  dependencies.py  logging_config.py  web.py
src/id3tag_renamer/middleware/: __init__.py  csrf.py
src/id3tag_renamer/routes/: __init__.py  api.py  auth.py  files.py  tags.py
src/id3tag_renamer/services/: __init__.py  file_service.py  metadata_service.py  path_service.py
src/id3tag_renamer/static/css/: style.css
src/id3tag_renamer/static/js/: browser.js  forms.js  lookup.js  player.js  preview.js  table.js
src/id3tag_renamer/templates/: base.html  index.html  login.html
src/id3tag_renamer/templates/components/: controls.html  navbar.html  player.html  sidebar.html  table.html
src/id3tag_renamer/templates/components/modals/: browse.html  edit.html  lookup.html  preview.html
tests/: test_web.py
